==> HJW-22/stm32F103_jxCar/Hardware/MyI2C.c <==
#include "stm32f10x.h"                  // Device header
#include "Delay.h"

void MyI2C_W_SCL(uint8_t BitValue)
{
    GPIO_WriteBit(GPIOB,GPIO_Pin_8,(BitAction)BitValue);
    Delay_us(10);
}


void MyI2C_W_SDA(uint8_t BitValue)
{
    GPIO_WriteBit(GPIOB,GPIO_Pin_7,(BitAction)BitValue);
    Delay_us(10);
}


uint8_t MyI2C_R_SDA(void)
{
    uint8_t BitValue;
    BitValue=GPIO_ReadInputDataBit(GPIOB,GPIO_Pin_7);
    Delay_us(10);
    return BitValue;
}


void MyI2C_Start(void){
    MyI2C_W_SDA(1);
    MyI2C_W_SCL(1);
    MyI2C_W_SDA(0);
    MyI2C_W_SCL(0);
}


void MyI2C_Stop(){
    MyI2C_W_SDA(0);
    MyI2C_W_SCL(1);
    MyI2C_W_SDA(1);
}


void MyI2C_SendByte(uint8_t Byte)
{
    uint8_t i;
    for ( i = 0; i < 8; i++)
    {
		MyI2C_W_SDA(Byte & (0x80 >> i));//从高位到地位一次发送
        MyI2C_W_SCL(1);   
        MyI2C_W_SCL(0);
    }
}


uint8_t MyI2C_ReceiveByte(void)
{
    uint8_t i;
    uint8_t Byte =0x00;
    MyI2C_W_SDA(1);
    for ( i = 0; i < 8; i++)
    {
        MyI2C_W_SCL(1);
				if (MyI2C_R_SDA()){Byte |= (0x80 >> i);}
        MyI2C_W_SCL(0);
    }
   return Byte;
}


void MyI2C_SendAck(uint8_t AckByte)
{
   
    MyI2C_W_SDA(AckByte);  // 通常0表示ACK，1表示NACK  
    MyI2C_W_SCL(1);   
    MyI2C_W_SCL(0);
}


uint8_t MyI2C_ReceiveAck(void)
{
    
    uint8_t AckByte;
    MyI2C_W_SDA(1);
    MyI2C_W_SCL(1);
    AckByte=MyI2C_R_SDA();
    MyI2C_W_SCL(0);
    return AckByte;
}
